<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apatxa</string>

    <!-- ACCIONES -->
    <string name="action_settings">Ajustes</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_anadir">Añadir</string>
    <string name="action_listo">Listo</string>
    <string name="action_cancelar">Cancelar</string>
    <string name="action_borrar">Borrar</string>
    <string name="action_aceptar">Aceptar</string>
    <string name="action_anadir_gasto">Añadir gasto</string>
    <string name="action_personas">Personas</string>
    <string name="action_editar">Cambiar</string>
    <string name="action_repartir">Repartir</string>
    <string name="action_gastos">Gastos</string>
    <string name="action_anadir_persona">Añadir persona</string>
    <string name="action_siguiente_abr">Sig.</string>
    <string name="action_pagado">Pagado</string>
    <string name="action_no_pagado">Pendiente</string>
    <string name="action_ordernar_por_nombre">Por nombre</string>
    <string name="action_ordernar_por_orden_creado">Por orden de creación</string>
    <string name="action_ordenar">Ordenar</string>

    <!-- ACCIONES (FIN) -->


    <!-- VALIDACIONES -->
    <string name="validacion_mensaje_obligatorio">Obligatorio</string>
    <!-- VALIDACIONES (FIN) -->


    <!-- ESTADOS APATXA -->
    <string name="estado_apatxa_sin_repartir">Sin repartir</string>
    <string name="estado_apatxa_sin_repartir_detalle">SIN REPARTIR</string>
    <string name="estado_apatxa_hecho">Hecho</string>
    <string name="estado_apatxa_hecho_detalle">HECHO</string>
    <string name="estado_apatxa_pendiente">Pendiente</string>

    <plurals name="estado_apatxa_pendiente_detalle_numero_personas">
        <item quantity="one">PENDIENTE.\nFalta 1 persona</item>
        <item quantity="other">PENDIENTE.\nFaltan %d personas</item>
    </plurals>
    <!-- ESTADOS APATXA (FIN) -->


    <!-- TITULOS -->
    <plurals name="titulo_cabecera_lista_personas">
        <item quantity="one">%d persona</item>
        <item quantity="other">%d personas</item>
    </plurals>
    <plurals name="titulo_cabecera_lista_gastos">
        <item quantity="one">%1$d gasto: %2$s %3$s</item>
        <item quantity="other">%1$d gastos: %2$s %3$s</item>
    </plurals>

    <plurals name="titulo_cabecera_lista_gastos_detalle_apatxa">
        <item quantity="one">%1$d gasto. Total: %2$s %3$s</item>
        <item quantity="other">%1$d gastos. Total: %2$s %3$s</item>
    </plurals>

    <plurals name="titulo_cabecera_lista_reparto_detalle_apatxa">
        <item quantity="one">Reparto de %1$d gasto: %2$s %3$s</item>
        <item quantity="other">Reparto de %1$d gastos: %2$s %3$s</item>
    </plurals>

    <string name="title_activity_lista_apatxas">Apatxa</string>
    <string name="title_activity_nuevo_apatxa_paso1">Nuevo (1/3)</string>
    <string name="title_activity_nuevo_apatxa_paso2">Nuevo (2/3)</string>
    <string name="title_activity_nuevo_apatxa_paso3">Nuevo (3/3)</string>
    <string name="title_activity_nuevo_gasto">Gasto nuevo</string>
    <string name="title_activity_editar_gasto">Cambiar gasto</string>
    <string name="title_activity_detalle_apatxa">Apatxa</string>
    <string name="title_activity_lista_contactos">Seleccionar contactos</string>
    <string name="title_activity_editar_apatxa">Cambiar Apatxa</string>
    <string name="title_activity_lista_personas">Personas</string>
    <string name="title_activity_lista_gastos">Gastos</string>
    <string name="title_activity_settings">Ajustes</string>
    <!-- TITULOS (FIN) -->


    <!-- MENSAJES DE CONFIRMACION -->
    <string name="mensaje_confirmacion_borrado_personas">¿Desea eliminar las personas seleccinadas?</string>
    <string name="mensaje_confirmacion_borrado_gastos">¿Desea eliminar los gastos seleccionados?</string>
    <string name="mensaje_confirmacion_borrado_apatxas">¿Desea eliminar las Apatxas seleccionadas?</string>
    <string name="mensaje_confirmacion_resetear_pagos_cobros_del_reparto_gastos">Algunas personas ya han pagado/cobrado. Si modificas la lista de gastos se realizará el reparto de nuevo y esta información se perderá.\n¿Deseas continuar?</string>
    <string name="mensaje_confirmacion_resetear_pagos_cobros_del_reparto_personas">Algunas personas ya han pagado/cobrado. Si modificas la lista de personas se realizará el reparto de nuevo y esta información se perderá.\n¿Deseas continuar?</string>
    <plurals name="mensaje_confirmacion_borrado_apatxas_realizado">
        <item quantity="one">Apatxa borrada</item>
        <item quantity="other">%d Apatxas borradas</item>
    </plurals>
    <plurals name="mensaje_confirmacion_borrado_personas_realizado">
        <item quantity="one">Persona borrada</item>
        <item quantity="other">%d personas borradas</item>
    </plurals>
    <plurals name="mensaje_confimacion_personas_anadidas_realizado">
        <item quantity="one">Persona añadida</item>
        <item quantity="other">%d personas añadidas</item>
    </plurals>
    <plurals name="mensaje_confirmacion_borrado_gastos_realizado">
        <item quantity="one">Gasto borrado</item>
        <item quantity="other">%d gastos borrados</item>
    </plurals>
    <string name="mensaje_confirmacion_apatxa_guardada">Apatxa guardada</string>
    <string name="mensaje_confirmacion_gasto_anadido">Gasto anadido</string>
    <string name="mensaje_confirmacion_gasto_modificado">Gasto modificado</string>
    <string name="mensaje_confirmacion_gastos_actualizados_reparto_actualizado">Gastos actualizados.\nSe ha realizado de nuevo el reparto</string>
    <string name="mensaje_confirmacion_personas_actualizadas">Personas actualizadas</string>
    <string name="mensaje_confirmacion_personas_actualizadas_reparto_actualizado">Personas actualizadas.\nSe ha realizado de nuevo el reparto</string>
    <string name="mensaje_confirmacion_pagos_actualizados_sin_pendientes">Pagos actualizados.\nNo hay nadie pendiente.</string>
    <plurals name="mensaje_confirmacion_pagos_actualizados">
        <item quantity="one">Pagos actualizados.\nFalta 1 persona.</item>
        <item quantity="other">Pagos actualizados.\nFaltan %1d personas.</item>
    </plurals>
    <!-- MENSAJES DE CONFIRMACION (FIN) -->

    <!-- LISTAS VACIAS -->
    <string name="lista_vacia_nuevo_apatxas_paso2">Aún no has añadido ninguna persona</string>
    <string name="lista_vacia_anadir_mas_tarde_nuevo_apatxas_paso2">Continuar y añadir más tarde</string>
    <string name="lista_vacia_nuevo_apatxas_paso3">Aún no has añadido ningún gasto</string>
    <string name="lista_vacia_anadir_mas_tarde_nuevo_apatxas_paso3">Continuar y añadir más tarde</string>
    <string name="lista_vacia_personas">Aún no has añadido ninguna persona</string>
    <string name="lista_vacia_gastos">Aún no has añadido ningún gasto</string>
    <string name="lista_vacia_contactos">No tienes contactos</string>
    <string name="lista_vacia_personas_reparto">Aún no hay personas entre las que hacer el reparto</string>
    <!-- LISTAS VACIAS (FIN) -->

    <!-- PATRONES FECHAS -->
    <string name="patron_fecha_dia_mes_ano">dd/MM/yyyy</string>
    <string name="patron_fecha_dia_mes_ano_ux">dd/mm/aaaa</string>
    <!-- PATRONES FECHAS (FIN) -->


    <string name="anadir_elementos_mas_tarde">Añadir elementos más tarde</string>

    <string name="cantidad_dinero_con_moneda">%1$s %2$s</string>
    <string name="concepto">Concepto</string>

    <string name="importe">Importe</string>
    <string name="nombre">Nombre</string>

    <plurals name="numero_personas_apatxa">
        <item quantity="one">1 persona</item>
        <item quantity="other">%d personas</item>
    </plurals>


    <string name="pagado_por">Quien ha pagado</string>
    <string name="reparto">Reparto</string>

    <plurals name="seleccionados">
        <item quantity="one">1</item>
        <item quantity="other">%d</item>
    </plurals>

    <plurals name="seleccionadas">
        <item quantity="one">1</item>
        <item quantity="other">%d</item>
    </plurals>


    <string name="sin_pagar">Sin pagar</string>
    <string name="solo_un_dia">Solo un día</string>

    <string name="varios_dias">Varios días</string>
    <string name="yo_mayusculas">YO</string>
    <string name="yo_mayusculas_nombre">YO - %s</string>
    <string name="lista_vacia">La lista está vacía</string>
    <string name="pagado">Pagado</string>
    <string name="debe">Debe</string>
    <string name="recibido">Recibido</string>
    <string name="recibe">Recibe</string>

    <string name="email_titulo_gastos">Gastos</string>
    <string name="email_no_paga_nadie">no paga nadie</string>
    <string name="email_titulo_reparto">Reparto</string>
    <string name="action_compartir">Compartir</string>


</resources>