<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jagusan.apatxas.RepartoApatxaActivity" >

    
    <item
        android:id="@+id/action_acceso_personas"
        android:icon="@drawable/ic_menu_action_apatxas_acceso_personas"
        android:orderInCategory="1"
        android:title="@string/action_personas"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_acceso_gastos"
        android:icon="@drawable/ic_menu_action_apatxas_acceso_gastos"
        android:orderInCategory="2"
        android:title="@string/action_gastos"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_actualizar_reparto_apatxa"
        android:icon="@drawable/ic_menu_action_apatxas_actualizar_reparto"
        android:orderInCategory="3"
        android:title="@string/action_repartir"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:id="@+id/action_editar_detalle_apatxa"
        android:icon="@drawable/ic_menu_action_apatxas_editar"
        android:orderInCategory="4"
        android:title="@string/action_editar"
        app:showAsAction="ifRoom"/>

</menu>