<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jagusan.apatxas.ListaGastosActivity" >

    <item
        android:id="@+id/action_anadir"
        android:icon="@drawable/ic_menu_action_apatxas_anadir_apatxa"
        android:title="@string/action_anadir"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_buscar"
        android:icon="@drawable/ic_menu_action_apatxas_buscar"
        android:title="@string/action_buscar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>