<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/apatxas_default_activity"
    android:orientation="vertical">


    <AutoCompleteTextView
        android:id="@+id/concepto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/concepto" >

        <requestFocus />
    </AutoCompleteTextView>

    <EditText
        android:id="@+id/totalGasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/importe"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/labelGastoPagadoPor"
        style="@style/apatxas_label_defecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/apatxas_margen_vertical_defecto"
        android:text="@string/pagado_por" />

    <Spinner
        android:id="@+id/listaPersonasApatxa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>